--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
             >
           </li>
           <li>
-            <a
-              class="header__lang-link link-select"
-              href="#"
-              lang="en">En</a>
+            <a class="header__lang-link link-select" href="#" lang="en">En</a>
           </li>
         </ul>
       </header>
@@ -327,19 +324,18 @@
             </div>
           </article>
         </section>
-        <section class="cover cover_margin_bottom">
-          <h2 class="cover__title">
-            <a
-              class="cover__link link-select"
-              target="_blank"
-              href="https://stampsy.com/na-elektrichkakh-do-baikala"
-              >До Байкала «на собаках»</a
-            >
-          </h2>
-          <p class="cover__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до
-            Байкала на электричках.
-          </p>
+        <section class="cover">
+          <a
+            class="cover__link"
+            target="_blank"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          >
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </a>
         </section>
       </main>
       <footer class="footer">
